--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
+    "react-tippy": "^1.4.0",
     "tailwind-merge": "^1.2.1"
   },
   "devDependencies": {
