--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^12.1.6",
     "next-themes": "^0.2.0",
     "react": "^18.1.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-tippy": "^1.4.0",
