fix: bug deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Portfolio | Helton Quintãns",
+  "name": "Portfolio Helton Quintans",
   "version": "0.1.0",
   "private": true,
   "scripts": {
